--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/fluent-ffmpeg": "^2.1.17",
     "@types/jest": "^26.0.15",
     "@types/node": "^15.0.1",
     "@types/react": "^17.0.0",
@@ -14,6 +15,7 @@
     "@types/styled-components": "^5.1.9",
     "antd": "^4.15.3",
     "electron-is-dev": "^2.0.0",
+    "fluent-ffmpeg": "^2.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -23,6 +25,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "debug": "yarn tsc electron.ts && concurrently \"cross-env BROWSER=none react-scripts start\" \"wait-on http://localhost:3000 && electron --inspect=5858 .\"",
     "start": "yarn tsc electron.ts && concurrently \"cross-env BROWSER=none react-scripts start\" \"wait-on http://localhost:3000 && electron .\"",
     "build": "react-scripts build && electron-builder",
     "test": "react-scripts test",
