--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/speech": "^4.5.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,8 +15,10 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
     "antd": "^4.15.3",
+    "chalk": "^4.1.1",
     "electron-is-dev": "^2.0.0",
     "fluent-ffmpeg": "^2.1.2",
+    "node-record-lpcm16": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -25,7 +28,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "debug": "yarn tsc electron.ts && concurrently \"cross-env BROWSER=none react-scripts start\" \"wait-on http://localhost:3000 && electron --inspect=5858 .\"",
+    "debug": "yarn tsc electron.ts && concurrently \"cross-env BROWSER=none react-scripts start\" \"wait-on http://localhost:3000 && electron . --inspect=5858 .\"",
     "start": "yarn tsc electron.ts && concurrently \"cross-env BROWSER=none react-scripts start\" \"wait-on http://localhost:3000 && electron .\"",
     "build": "react-scripts build && electron-builder",
     "test": "react-scripts test",
